Sækja efni úr fyrirlestri

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Verkefni 10</title>
+    <title>Hópverkefni 2</title>
     <link rel="stylesheet" href="./styles.css" />
     <script type="module" src="./src/index.js"></script>
   </head>
 
   <body>
-    <!-- Hér á ekkert að vera! -->
+    <div id="app"></div>
   </body>
 </html>
